// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots matches snapshot for button with additional text 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-3 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 text-button-md"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Button with Text
    </span>
    <span
      class="text-button-sm font-bold text-current"
    >
      Additional Info
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for button with icon 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-3 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 gap-1.5 text-button-md"
  >
    <span
      class="icon inline-flex items-center justify-center text-current"
    >
      <span>
        🔍
      </span>
    </span>
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      With Icon
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for button with right icon 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-3 text-conversion-500 flex-row-reverse bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 gap-1.5 text-button-md"
  >
    <span
      class="icon inline-flex items-center justify-center text-current"
    >
      <span>
        🔍
      </span>
    </span>
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      With Right Icon
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for different sizes 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-2 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 text-button-sm"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Small Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for different sizes 2`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-3 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 text-button-md"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Medium Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for different sizes 3`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-6 py-3.5 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 text-button-lg"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Large Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for disabled state 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-3 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 text-button-md"
    disabled=""
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Disabled Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for outlined variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer bg-transparent outline-[1.67px] outline-offset-[-1.67px] outline-current px-3.5 py-3 text-conversion-500 flex-row hover:bg-conversion-900 hover:outline-conversion-900 hover:*:text-neutral-00 text-button-md"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Outlined Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for solid variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer px-3.5 py-3 text-conversion-500 flex-row bg-conversion-500 *:text-neutral-00 hover:bg-conversion-900 text-button-md"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Solid Button
    </span>
  </button>
</div>
`;

exports[`Button Snapshots matches snapshot for text variant 1`] = `
<div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-xl font-secondary font-bold transition-all duration-200 text-center relative box-border h-fit disabled:opacity-60 disabled:cursor-not-allowed cursor-pointer bg-transparent *:decoration-current px-3.5 py-3 text-conversion-500 flex-row hover:text-conversion-900 *:no-underline hover:underline !p-0 text-button-md"
  >
    <span
      class="inline-block whitespace-nowrap overflow-visible text-current"
    >
      Text Button
    </span>
  </button>
</div>
`;
